# CodeGuard

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  README.md  dev-entrypoint.sh  develop.bat  develop.sh  docker-compose.yaml  docker-entrypoint.sh  entrypoint.sh  prod-entrypoint.sh  production.bat  production.sh  pyproject.toml  requirements.txt  requirements2.txt
CodeGuard/: __init__.py  auth.py  config.bak  config.ini  config.ini.example  config.py  seed.py  views.py
CodeGuard/admin/: __init__.py  create.py  dashboard_catalogue.py  details.py  exam.py
CodeGuard/courses/: __init__.py  catalogue.py  contents.py  details.py  exam.py
CodeGuard/forms/: __init__.py  auth.py  course.py  exam.py  profile.py
CodeGuard/front-end/: base-no-bars.html  base.html  change_pass.html  change_pass_email.html  exam.html  forgot_pass.html  index.html  login.html  register.html  results.html  test.html
CodeGuard/models/: __init__.py  enums.py
CodeGuard/semgrep_rules/: insecure-database-connection.yaml  insecure-http-headers.yaml  php-bad-login-throttle.yaml  php-login-throttle.yaml  secure-database-connection.yaml  secure-from-xss.yaml  secure-http-headers.yaml  secure-parameterized-sql.yaml
CodeGuard/user/: __init__.py  profile.py
CodeGuard/utils/: course.py  decorators.py  email.py  errors.py  exam.py  initialize.py  logging.py  security.py  user.py
conf/: http.conf
imgwebapp/: __init__.py  auth.py  codeMirror.py  course.py
imgwebapp/templates/: Admin.html  ForgotPass.html  Profile.html  admin_add_course.html  (+27 more)
instance/: imgwebapp.sqlite
postfix/: Dockerfile
(+146 files in other folders)
