[project]
name = "CodeGuard"
version = "1.0.0"
description = "A secure coding platform"
dependencies = [
    "flask",
    "flask-bcrypt",
    "flask-reuploaded",
    "flask-wtf",
]
requires-python = ">=3.12"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths=['tests']

[tool.coverage.run]
branch = true
source = ["CodeGuard"]